Minor optimisations